# hyperreal_mirror

./: MANIFEST.in  README.md  postBuild  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: test_python.yml
binder/: postBuild  requirements.txt  start
docs/: design.md
docs/source/: conf.py  docs.rst  index.rst
examples/australian_federal_hansard/: hansard_corpus.py  unparliamentary.py
examples/stackoverflow/: prepare_data.sh
hyperreal/: __init__.py  _index_schema.py  cli.py  corpus.py  db_utilities.py  doc_feature_tools.py  feature_cluster.py  feature_clustering.py  field_types.py  index.py  index_builder.py  index_core.py  index_plugin.py  query.py  server.py  utilities.py  value_handlers.py  web_rendering.py  web_server.py
hyperreal/static/: style.css
hyperreal/templates/: base.html  cluster.html  create_clusters.html  delete_clusters.html  details.html  index.html  macros.html
jupyter_config/: jupyter_lab_config.py  jupyter_notebook_config.py  overrides.json
notebooks/: conversations.py  stackexchange.ipynb  twenty_newsgroups.py
notebooks/spreadsheet/: spreadsheet.py  spreadsheet_corpus.py
notebooks/tabular/: tabular.py  tabular_corpus.py  tabular_ui.py
notebooks/transcripts/: conversations.py  process_transcripts.py  transcripts.ipynb  transcripts.py
notebooks/twenty_newsgroups/: twenty_newsgroups.py  twenty_newsgroups_final.py
tests/: test_cli.py  test_clusters.py  test_corpus.py  test_doc_feature_tools.py  test_feature_clustering.py  test_index.py  test_server.py  test_value_handlers.py
tests/corpora/: alice.db
(+2 files in other folders)
