[project]
name = "hyperreal"
description = "Hyperreal is a library and tool for intepretive topic modelling."
readme = "README.md"
requires-python = ">=3.10.0"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Sam Hames"},
  {name = "Kateryna Kasianenko"}
]
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "pyroaring>=1.0.0",
  "tinyhtml>=1.3.0",
  "tornado>=6.4.0",
]
version="0.7.0.dev1"

[project.optional-dependencies]
dev = ["pytest", "black", "tox", "requests", "pylint", "isort", "hypothesis", "sphinx", "sphinx_autodoc_typehints"]

[project.urls]
Repository = "https://hyperreal.app"
Homepage = "https://hyperreal.app"

[project.scripts]
hyperreal = "hyperreal.cli:cli"

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--ignore=examples"

[tool.isort]
profile = "black"

[tool.pylint.MAIN]
extension-pkg-allow-list = [
  "pyroaring",
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "too-many-arguments",
  "too-many-locals",
  "protected-access",
  "too-many-instance-attributes",
]
